syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message PatchCredentialRequest {
	reserved "domain", "roles", "entity", "name", "secret", "expires_at";

	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue alias = 6;
	google.protobuf.StringValue description = 8;
}

message PatchCredentialResponse {
	Credential credential = 1;
}
